<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill_amount">Bill Amount:</string>
    <string name="tip_percent">Tip Percent:</string>
    <string name="total">Total:</string>
    <string name="_15">15%</string>
    <string name="tip_total">Tip Total:</string>
    <string name="_0_000">0.00</string>
    <string name="_0_00">0.00</string>
    <string name="_00_00">0.00</string>
</resources>
