<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/money231"

    tools:context="com.example.gateway.tipcalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_amount"
        android:paddingTop="16dp"
        android:id="@+id/billAmountLabel"
        android:paddingLeft="16dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_percent"
        android:paddingTop="16dp"
        android:id="@+id/tipPercentLabel"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingLeft="16dp"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/billAmountLabel"
        android:layout_alignRight="@+id/billAmountLabel"
        android:layout_alignEnd="@+id/billAmountLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:id="@+id/totatLabel"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/tipTotalLabel"
        android:layout_alignLeft="@+id/tipTotalLabel"
        android:layout_alignStart="@+id/tipTotalLabel" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tipSeekBar"
        android:max="30"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/tipPercentLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:thumb="@drawable/drag_thumb"
        android:progress="15" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/billAmountEditText"
        android:maxLines="1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/_00_00"
        android:layout_above="@+id/tipPercentLabel"
        android:layout_centerHorizontal="true"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipPercentTextView"
        android:text="@string/_15"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_above="@+id/tipSeekBar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:id="@+id/tipAmountTextView"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignLeft="@+id/tipPercentTextView"
        android:layout_alignStart="@+id/tipPercentTextView"
        android:layout_centerVertical="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_000"
        android:id="@+id/totalTextView"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/totatLabel"
        android:layout_toRightOf="@+id/tipTotalLabel"
        android:layout_toEndOf="@+id/tipTotalLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_total"
        android:id="@+id/tipTotalLabel"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignTop="@+id/tipAmountTextView"
        android:layout_alignRight="@+id/tipPercentLabel"
        android:layout_alignEnd="@+id/tipPercentLabel" />

</RelativeLayout>